<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.google.android.material.textfield.TextInputLayout" />
        <import type="com.mankovskaya.githubtest.domain.feature.login.LoginAction" />

        <variable
            name="stateViewModel"
            type="com.mankovskaya.githubtest.ui.widget.ProgressViewModel" />

        <variable
            name="viewModel"
            type="com.mankovskaya.githubtest.domain.feature.login.LoginViewModel" />
    </data>
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/view_toolbar"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <FrameLayout
                android:id="@+id/errorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:layout_margin="@dimen/size_medium"
                android:padding="@dimen/size_medium"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="@{viewModel.stateRelay.error == null ? View.GONE : View.VISIBLE}" >
                <TextView
                    android:id="@+id/errorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.stateRelay.error}"
                    android:textAlignment="center" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint"
                android:padding="@dimen/size_small"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/errorLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inconsolata_regular"
                    android:inputType="textEmailAddress"
                    android:text="@{viewModel.stateRelay.email}"
                    tools:text="email@email.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:padding="@dimen/size_small"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inconsolata_regular"
                    android:inputType="textPassword"
                    android:text="@{viewModel.stateRelay.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_small"
                android:stateListAnimator="@null"
                android:text="@string/login_login"
                app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
                app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
                app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.mankovskaya.githubtest.ui.widget.ProgressView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            app:viewModel="@{stateViewModel}" />

    </RelativeLayout>

</layout>